Ticket #3871 - Artificer: Fix cards layout: multiple enabled actions may break the design

--- a/modules/boonex/artificer/data/template/mod_general/css/main.css
+++ b/modules/boonex/artificer/data/template/mod_general/css/main.css
@@ -43,7 +43,7 @@
 .bx-base-general-unit-meta ul.bx-menu-custom.bx-menu-custom-hor > li.bx-menu-item-nl {
     display: none;
     width: 100%;
-    height: 0.5rem;
+    height: 0;
 }
 .bx-base-pofile-unit-with-cover .bx-base-general-unit-meta ul.bx-menu-custom.bx-menu-custom-hor > li.bx-menu-item-nl {
     display: block;
