--- a/modules/boonex/artificer/data/template/mod_groups/css/main.css
+++ b/modules/boonex/artificer/data/template/mod_groups/css/main.css
@@ -2,13 +2,4 @@
 .bx-base-groups-unit-with-cover .bx-base-pofile-unit-info .bx-base-general-unit-meta ul.bx-menu-custom.bx-menu-custom-hor {
     -webkit-justify-content: flex-start;
     justify-content: flex-start;
-
-    width: 100%;
-}
-.bx-base-groups-unit-with-cover .bx-base-pofile-unit-info .bx-base-general-unit-meta ul .bx-menu-item-nl ~ li .bx-base-profile-unit-meta-item,
-.bx-base-groups-unit-with-cover .bx-base-pofile-unit-info .bx-base-general-unit-meta ul .bx-menu-item-nl ~ li .bx-base-profile-unit-meta-item .bx-btn {
-    display: block;
-}
-.bx-base-groups-unit-with-cover .bx-base-pofile-unit-info .bx-base-general-unit-meta ul .bx-menu-item-nl ~ li .bx-base-profile-unit-meta-item .bx-btn {
-    text-align: center;
 }
